; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_slicethread.c_avpriv_slicethread_create.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_slicethread.c_avpriv_slicethread_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @avpriv_slicethread_create(i32** %0, i8* %1, void (i8*, i32, i32, i32, i32)* %2, void (i8*)* %3, i32 %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca void (i8*, i32, i32, i32, i32)*, align 8
  %9 = alloca void (i8*)*, align 8
  %10 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i8* %1, i8** %7, align 8
  store void (i8*, i32, i32, i32, i32)* %2, void (i8*, i32, i32, i32, i32)** %8, align 8
  store void (i8*)* %3, void (i8*)** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32**, i32*** %6, align 8
  store i32* null, i32** %11, align 8
  %12 = load i32, i32* @EINVAL, align 4
  %13 = call i32 @AVERROR(i32 %12)
  ret i32 %13
}

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
